external-crates/move/move-compiler/tests/move_check/feature_gate/dot_call.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/feature_gate/dot_call.move:4:5
  │
4 │     public use fun imm as S.f;
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^ method style syntax not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/feature_gate/dot_call.move:13:9
   │
13 │         use fun mut as S.g;
   │         ^^^^^^^^^^^^^^^^^^^ method style syntax not supported by current edition 'legacy', only '2024.alpha' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/feature_gate/dot_call.move:14:9
   │
14 │         s.imm();
   │         ^^^^^^^ method style syntax not supported by current edition 'legacy', only '2024.alpha' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/feature_gate/dot_call.move:15:9
   │
15 │         s.f();
   │         ^^^^^ method style syntax not supported by current edition 'legacy', only '2024.alpha' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/feature_gate/dot_call.move:16:9
   │
16 │         s.mut();
   │         ^^^^^^^ method style syntax not supported by current edition 'legacy', only '2024.alpha' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/feature_gate/dot_call.move:17:9
   │
17 │         s.g();
   │         ^^^^^ method style syntax not supported by current edition 'legacy', only '2024.alpha' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/feature_gate/dot_call.move:18:9
   │
18 │         s.val();
   │         ^^^^^^^ method style syntax not supported by current edition 'legacy', only '2024.alpha' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

